--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -71,3 +71,7 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+
+[CoreRedirects]
++PropertyRedirects=(OldName="/Script/ToonTanks.Tank.SpringArmComponent",NewName="/Script/ToonTanks.Tank.SpringArm")
++PropertyRedirects=(OldName="/Script/ToonTanks.Tank.CameraComponent",NewName="/Script/ToonTanks.Tank.Camera")
