Interpolate rotation volume block

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -75,3 +75,4 @@ ManualIPAddress=
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/ToonTanks.Tank.SpringArmComponent",NewName="/Script/ToonTanks.Tank.SpringArm")
 +PropertyRedirects=(OldName="/Script/ToonTanks.Tank.CameraComponent",NewName="/Script/ToonTanks.Tank.Camera")
++PropertyRedirects=(OldName="/Script/ToonTanks.BasePawn.TurnInterpolateRate",NewName="/Script/ToonTanks.BasePawn.TurnInterpolateSpeed")
