--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -76,3 +76,4 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/ToonTanks.Tank.SpringArmComponent",NewName="/Script/ToonTanks.Tank.SpringArm")
 +PropertyRedirects=(OldName="/Script/ToonTanks.Tank.CameraComponent",NewName="/Script/ToonTanks.Tank.Camera")
 +PropertyRedirects=(OldName="/Script/ToonTanks.BasePawn.TurnInterpolateRate",NewName="/Script/ToonTanks.BasePawn.TurnInterpolateSpeed")
++PropertyRedirects=(OldName="/Script/ToonTanks.Projectile.BaseMesh",NewName="/Script/ToonTanks.Projectile.ProjectileMesh")
