--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -7,6 +7,7 @@ r.DefaultFeature.AutoExposure=False
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maps/Main.Main
 GameDefaultMap=/Game/Maps/Main.Main
+GlobalDefaultGameMode=/Game/BluePrints/GameMode/BP_ToonTanksGameMode.BP_ToonTanksGameMode_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -77,3 +78,4 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/ToonTanks.Tank.CameraComponent",NewName="/Script/ToonTanks.Tank.Camera")
 +PropertyRedirects=(OldName="/Script/ToonTanks.BasePawn.TurnInterpolateRate",NewName="/Script/ToonTanks.BasePawn.TurnInterpolateSpeed")
 +PropertyRedirects=(OldName="/Script/ToonTanks.Projectile.BaseMesh",NewName="/Script/ToonTanks.Projectile.ProjectileMesh")
+
