--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -78,4 +78,5 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/ToonTanks.Tank.CameraComponent",NewName="/Script/ToonTanks.Tank.Camera")
 +PropertyRedirects=(OldName="/Script/ToonTanks.BasePawn.TurnInterpolateRate",NewName="/Script/ToonTanks.BasePawn.TurnInterpolateSpeed")
 +PropertyRedirects=(OldName="/Script/ToonTanks.Projectile.BaseMesh",NewName="/Script/ToonTanks.Projectile.ProjectileMesh")
++PropertyRedirects=(OldName="/Script/ToonTanks.Projectile.ProjectileTrail",NewName="/Script/ToonTanks.Projectile.TrailParticles")
 
