--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -79,4 +79,5 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/ToonTanks.BasePawn.TurnInterpolateRate",NewName="/Script/ToonTanks.BasePawn.TurnInterpolateSpeed")
 +PropertyRedirects=(OldName="/Script/ToonTanks.Projectile.BaseMesh",NewName="/Script/ToonTanks.Projectile.ProjectileMesh")
 +PropertyRedirects=(OldName="/Script/ToonTanks.Projectile.ProjectileTrail",NewName="/Script/ToonTanks.Projectile.TrailParticles")
++PropertyRedirects=(OldName="/Script/ToonTanks.BasePawn.ExplosionParticles",NewName="/Script/ToonTanks.BasePawn.DeathParticles")
 
