Add Cam Shake VFX

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -80,4 +80,5 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/ToonTanks.Projectile.BaseMesh",NewName="/Script/ToonTanks.Projectile.ProjectileMesh")
 +PropertyRedirects=(OldName="/Script/ToonTanks.Projectile.ProjectileTrail",NewName="/Script/ToonTanks.Projectile.TrailParticles")
 +PropertyRedirects=(OldName="/Script/ToonTanks.BasePawn.ExplosionParticles",NewName="/Script/ToonTanks.BasePawn.DeathParticles")
++PropertyRedirects=(OldName="/Script/ToonTanks.Projectile.HitCameraShake",NewName="/Script/ToonTanks.Projectile.HitCameraShakeClass")
 
